--- a/src/tuna/cuda/CMakeLists.txt
+++ b/src/tuna/cuda/CMakeLists.txt
@@ -21,6 +21,18 @@ target_link_libraries(gpu_library PUBLIC
 )
 
 # set what comes before the library name, here no "lib"
-set_target_properties(gpu_library PROPERTIES PREFIX "")
+set_target_properties(gpu_library PROPERTIES
+  PREFIX ""
+)
+
+add_custom_command(
+  TARGET gpu_library POST_BUILD
+  # OUTPUT src/tuna/gpu_library.so POST_BUILD
+  # DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/gpu_library.so
+  COMMENT $<TARGET_FILE:gpu_library>
+  COMMAND ${CMAKE_COMMAND} -E copy
+          $<TARGET_FILE:gpu_library>
+          {CMAKE_SOURCE_DIR}/../../gpu_library.so
+)
 
 # configure_file(test_mul.py test_mul.py COPYONLY)
