--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tuna"
-version = "0.3.0"
+version = "0.4.0"
 description = ""
 authors = ["ElderMillenial <eldermillenial@protonmail.com>"]
 readme = "README.md"
@@ -18,6 +18,7 @@ python-dotenv = "^1.0.1"
 pydantic = "^2.8.2"
 setuptools-cpp = "^0.1.0"
 wheel = "^0.43.0"
+typer = "^0.12.5"
 
 
 [build-system]
