Modified bump2version config

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -22,6 +22,6 @@ values =
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
-[bumpversion:file:api/__init__.py]
+[bumpversion:file:src/tuna/__init__.py]
 search = __version__ = "v{current_version}"
 replace = __version__ = "v{new_version}"
